--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/inquirer": "^9.0.7"
   },
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "inquirer": "^9.2.21"
   }
 }
